[gd_scene load_steps=51 format=2]

[ext_resource path="res://DrillControl.gd" type="Script" id=1]
[ext_resource path="res://World/building_1 animation.png" type="Texture" id=2]
[ext_resource path="res://World/labscreenmonitor.png" type="Texture" id=3]
[ext_resource path="res://UI/EquipmentIconsC330.png" type="Texture" id=4]
[ext_resource path="res://World/building_3 Sprite.png" type="Texture" id=5]
[ext_resource path="res://Effects/Free Smoke Fx  Pixel 05 copy.png" type="Texture" id=6]
[ext_resource path="res://World/steelpanel.png" type="Texture" id=7]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Music and Sounds/Farm_Game_Loop_Mechanical_Engine_Tractor_Start_Drive_Garden_Machine_Idle_Hum_2_Deep_Tank.wav" type="AudioStream" id=9]
[ext_resource path="res://World/black_hole.png" type="Texture" id=10]
[ext_resource path="res://World/building_3 Sprite_damaged1.png" type="Texture" id=11]
[ext_resource path="res://World/building_3 Sprite_damaged2.png" type="Texture" id=12]
[ext_resource path="res://World/building_1 animation_dmgd.png" type="Texture" id=13]
[ext_resource path="res://UI/world1grab_drill.png" type="Texture" id=14]
[ext_resource path="res://World/OilDrill1.tscn" type="PackedScene" id=15]
[ext_resource path="res://World/Barrel.tscn" type="PackedScene" id=16]
[ext_resource path="res://World/TreeTwo.tscn" type="PackedScene" id=17]
[ext_resource path="res://World/OilSlick1.tscn" type="PackedScene" id=18]
[ext_resource path="res://World/Tree.tscn" type="PackedScene" id=19]
[ext_resource path="res://World/GreyStone1.tscn" type="PackedScene" id=20]
[ext_resource path="res://World/OilBarrelsOne.tscn" type="PackedScene" id=21]
[ext_resource path="res://World/CautionTile.tscn" type="PackedScene" id=22]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 8 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 92, 124 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 13 )
region = Rect2( 92, 0, 92, 124 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 13 )
region = Rect2( 184, 0, 92, 124 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 13 )
region = Rect2( 276, 0, 92, 124 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 92, 124 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 92, 0, 92, 124 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 184, 0, 92, 124 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 276, 0, 92, 124 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 0, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 64, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 128, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 192, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 256, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 320, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 384, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 448, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 512, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 576, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 640, 384, 64, 64 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=20]
radius = 28.0

[sub_resource type="CapsuleShape2D" id=21]
radius = 14.0

[sub_resource type="CircleShape2D" id=22]
radius = 6.0

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 1, 1, 1, 1 )

[node name="DrillControl" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( 67, 47 )
scale = Vector2( 1.96875, 1 )
texture = ExtResource( 10 )

[node name="Sprite6" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( 2.5, 53 )
scale = Vector2( 1.96875, 1.25 )
texture = ExtResource( 10 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 66, 16 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite4"]
margin_left = -46.0
margin_top = -36.0
margin_right = 50.0
margin_bottom = -20.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Drill Control"
text = "Drill Control"

[node name="FurnaceDMG" type="AnimatedSprite" parent="."]
modulate = Color( 0.447059, 0.317647, 0.317647, 1 )
frames = SubResource( 28 )
frame = 2

[node name="Furnace" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
frame = 3
playing = true

[node name="Clouds1" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( 23, -3 )
frames = SubResource( 18 )
frame = 2
playing = true

[node name="Clouds2" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( 11, -7 )
scale = Vector2( 0.90625, 0.9375 )
frames = SubResource( 18 )
frame = 1
playing = true

[node name="Clouds3" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( 21, -19 )
scale = Vector2( 0.90625, 0.9375 )
frames = SubResource( 18 )
frame = 1
playing = true

[node name="Clouds4" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( 11, -26 )
scale = Vector2( 0.671875, 0.71875 )
frames = SubResource( 18 )
frame = 1
playing = true

[node name="Clouds5" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( 72, 10 )
scale = Vector2( 0.671875, 0.71875 )
z_index = 1
frames = SubResource( 18 )
playing = true

[node name="Clouds6" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( -22.75, 1.5 )
scale = Vector2( 0.992187, 1.01562 )
z_index = 1
frames = SubResource( 18 )
playing = true

[node name="Clouds7" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( -8, -38 )
scale = Vector2( 0.992187, 1.01562 )
z_index = 1
frames = SubResource( 18 )
frame = 10
playing = true

[node name="Clouds8" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( 43.125, 5.25 )
scale = Vector2( 1.05859, 1.07031 )
z_index = 1
frames = SubResource( 18 )
frame = 9
playing = true

[node name="Clouds9" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( 24, 44 )
scale = Vector2( 1.05859, 1.07031 )
z_index = 1
frames = SubResource( 18 )
frame = 9
playing = true

[node name="Clouds10" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( 72.5625, 2.375 )
scale = Vector2( 1.38867, 1.30078 )
z_index = 1
frames = SubResource( 18 )
frame = 9
playing = true

[node name="Clouds11" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( 56, 49 )
scale = Vector2( 1.38867, 1.30078 )
z_index = 1
frames = SubResource( 18 )
frame = 8
playing = true

[node name="Clouds12" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( -11, 46 )
scale = Vector2( 1.38867, 1.30078 )
z_index = 1
frames = SubResource( 18 )
frame = 7
playing = true

[node name="Clouds13" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( -10, -42 )
scale = Vector2( 1.38867, 1.30078 )
z_index = 1
frames = SubResource( 18 )
frame = 7
playing = true

[node name="Sprite9" type="Sprite" parent="."]
modulate = Color( 0.407843, 0.282353, 0.282353, 1 )
position = Vector2( 67, 36 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="Sprite8" type="Sprite" parent="."]
modulate = Color( 0.588235, 0.376471, 0.376471, 1 )
position = Vector2( 67, 36 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 67, 36 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="AnimatedSprite6" type="AnimatedSprite" parent="."]
frames = SubResource( 19 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 77, 12 )
scale = Vector2( 0.224226, 0.306604 )
texture = ExtResource( 3 )

[node name="Sprite5" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 0, 1 )
position = Vector2( 56, 12 )
scale = Vector2( 0.224226, 0.306604 )
texture = ExtResource( 3 )

[node name="RedLight" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.74902 )
position = Vector2( 44.2, 35.2 )
scale = Vector2( 0.3625, 0.3625 )
texture = ExtResource( 4 )

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1, 24 )
shape = SubResource( 20 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 73, 34 )
rotation = 1.5708
shape = SubResource( 21 )

[node name="Light" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Light"]
position = Vector2( 44, 35 )
shape = SubResource( 22 )

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="Sprite7" type="Sprite" parent="."]
z_index = 2

[node name="Panel" type="Panel" parent="Sprite7"]
margin_left = -250.0
margin_top = -191.0
margin_right = 277.0
margin_bottom = 172.0
custom_styles/panel = SubResource( 23 )

[node name="FadeFinishTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Rattle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -7.0
pitch_scale = 0.5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 160, 90 )
scale = Vector2( 0.15, 0.15 )
z_index = 2
texture = ExtResource( 14 )

[node name="OilSlick1" parent="CanvasLayer/Sprite" instance=ExtResource( 18 )]
position = Vector2( -66.6666, 233.333 )
scale = Vector2( 8, 3.5 )

[node name="OilBarrelsOne" parent="CanvasLayer/Sprite" instance=ExtResource( 21 )]
position = Vector2( -113.333, 85 )
scale = Vector2( 5, 5 )

[node name="OilBarrelsOne3" parent="CanvasLayer/Sprite" instance=ExtResource( 21 )]
position = Vector2( 654, 58 )
scale = Vector2( 5, 5 )

[node name="OilBarrelsOne2" parent="CanvasLayer/Sprite" instance=ExtResource( 21 )]
position = Vector2( -113.333, 106.667 )
scale = Vector2( 5, 5 )

[node name="OilDrill1" parent="CanvasLayer/Sprite" instance=ExtResource( 15 )]
position = Vector2( 10, 30 )
scale = Vector2( 5.5, 5.5 )
frame = 3

[node name="Barrel" parent="CanvasLayer/Sprite" instance=ExtResource( 16 )]
position = Vector2( -333, 292 )
scale = Vector2( 5, 5 )

[node name="CautionTile" parent="CanvasLayer/Sprite" instance=ExtResource( 22 )]
position = Vector2( -200, 180 )
scale = Vector2( 2.5, 2.5 )

[node name="CautionTile2" parent="CanvasLayer/Sprite" instance=ExtResource( 22 )]
position = Vector2( 226.667, 180 )
scale = Vector2( 2.5, 2.5 )

[node name="CautionTile3" parent="CanvasLayer/Sprite" instance=ExtResource( 22 )]
position = Vector2( 226.667, 266.667 )
scale = Vector2( 2.5, 2.5 )

[node name="GreyStone1" parent="CanvasLayer/Sprite" instance=ExtResource( 20 )]
position = Vector2( 340, 280 )
scale = Vector2( 2.5, 2.5 )

[node name="TreeTwo" parent="CanvasLayer/Sprite" instance=ExtResource( 17 )]
position = Vector2( -406.667, -173.333 )
scale = Vector2( 4, 4 )

[node name="Tree" parent="CanvasLayer/Sprite" instance=ExtResource( 19 )]
position = Vector2( -546.667, -33.3333 )
scale = Vector2( 5, 5 )

[connection signal="animation_finished" from="FurnaceDMG" to="." method="_on_FurnaceDMG_animation_finished"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
[connection signal="area_entered" from="Light" to="." method="_on_Light_area_entered"]
[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_FadeTimer_timeout"]
[connection signal="timeout" from="FadeFinishTimer" to="." method="_on_FadeFinishTimer_timeout"]
